--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>hello phaser!</title>
+        <title>mitchell in the bush</title>
         <script src="https://cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script>
         <script src="state.js"></script>
         <script src="mitchell.js"></script>
@@ -13,29 +13,6 @@
     <script type="text/javascript">
 
     window.onload = gameFunction();
-    /*
-    function() {
-
-
-					
-
-        var g_game = new Phaser.Game(800, 600, Phaser.AUTO, '', { preload: preload, create: create });
-
-		var g_mitchell;
-		var g_state;
-
-        function preload () {
-			console.log('preload');
-			Mitchell.preload(g_game);
-        }
-
-        function create () {
-			console.log('create');
-			g_mitchell = new Mitchell(g_game);
-
-        }
-
-    };*/
 
     </script>
 
