--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="state.js"></script>
         <script src="mitchell.js"></script>
         <script src="game.js"></script>
+        <script src="terangitukehu.js"></script>
     </head>
     <body>
 
