conversation trigger on proximity

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>mitchell in the bush</title>
         <script src="https://cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script>
         <script src="state.js"></script>
+        <script src="conversation.js"></script>
+        <script src="conversationManager.js"></script>
         <script src="mitchell.js"></script>
         <script src="game.js"></script>
         <script src="terangitukehu.js"></script>
