moved code into src, tried + failed to use npm + webpack

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
         <meta charset="UTF-8" />
         <title>mitchell in the bush</title>
         <script src="https://cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script>
-        <script src="state.js"></script>
-        <script src="conversation.js"></script>
-        <script src="conversationManager.js"></script>
-        <script src="mitchell.js"></script>
+        <script src="node_modules/bondage/dist/bondage.min.js"></script>
+        <script src="src/state.js"></script>
+        <script src="src/conversation.js"></script>
+        <script src="src/conversationManager.js"></script>
+        <script src="src/mitchell.js"></script>
+        <script src="src/terangitukehu.js"></script>
         <script src="game.js"></script>
-        <script src="terangitukehu.js"></script>
     </head>
     <body>
 
