yarn data processing

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>mitchell in the bush</title>
         <script src="https://cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script>
         <script src="node_modules/bondage/dist/bondage.min.js"></script>
+        <!--<script src="node_modules/bondage/src/bondage.js"></script>-->
         <script src="src/state.js"></script>
         <script src="src/conversation.js"></script>
         <script src="src/conversationManager.js"></script>
